--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,5 @@
   <meta charset="UTF-8">
-  <title>Potluck Party</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -7,9 +7,7 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        &#127881 Potluck Party! &#127881
-      </h1>
+      <h1> Tech Blog </h1>
     </header>
       <main class="container container-fluid mt-5">
         {{{ body }}}
