added login handlebars and some minor stuff i forgot

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,3 +9,5 @@
     </p>
   </div>
 </div>
+
+{{!-- hoempage includes: existing blog posts, navigation links for homepage and dashboard, log in button --}}
