--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,26 +2,21 @@
 {{!-- hoempage includes: existing blog posts, navigation links for homepage and dashboard, log in button --}}
 
 
-<!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
-<div class="row mb-4 project">
+<!-- Loop over each object in the posts array -->
+{{#each posts as |post| }}
+<div class="row mb-4 post">
   <div class="col-md-5">
     <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
+      <a href="/post/{{post.id}}">{{post.name}}</a>
     </h2>
     <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
+      {{post.title}}
     </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+    <p>Created by {{post.user.username}}</p>
   </div>
   <div class="col-md-7">
     <p>
-      {{project.description}}
+      {{post.contents}}
     </p>
   </div>
 </div>
