added a lot of things in one sitting... fixed clicking on a post and the post info coming up. added comment-routes.js. add some references between the models. created comment.js in public. fixed the handlebars in many ways.still a lot to do.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,9 @@
 
-{{!-- hoempage includes: existing blog posts, navigation links for homepage and dashboard, log in button --}}
+{{!-- homepage includes: existing blog posts, navigation links for homepage and dashboard, log in button --}}
 
 
 <!-- Loop over each object in the posts array -->
-{{#each posts as |post| }}
+{{#each post as |post| }}
 <div class="row mb-4 post">
   <div class="col-md-5">
     <h2>
