--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,11 +1,24 @@
 <div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{description}}</p>
-  <p>Created by {{user.name}}</p>
+  <h2>{{post.title}}</h2>
+  {{!-- <p>Created by {{user.username}}</p> --}}
   <p>
-    agsrgdrht
+    {{post.content}}
   </p>
+  {{#each commentData}}
   <p>
-    <button class="btn btn-primary">eawefwegrggr</button>
+    {{this.body}}
   </p>
+  {{/each}}
+  {{!-- <p><button class="btn btn-primary">comment</button></p> --}}
+    <form class="form comment-form">
+      <div class="form-group">
+        <label for="comment-content">comment:</label>
+        <input class="form-input" type="text" id="comment-content" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">submit</button>
+      </div>
+    </form>
 </div>
+
+<script src="./js/comment.js"></script>
