added comments to routes and handlebars so i can follow the trail in the back end

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,5 @@
+<p> -- you are in homepage handlebars --</p>
+
 
 {{!-- homepage includes: existing blog posts, navigation links for homepage and dashboard, log in button --}}
 
