--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,3 +1,4 @@
+<p> -- you are in post handlebars --</p>
 <div class="text-center">
   <h2>{{post.title}}</h2>
   {{!-- <p>Created by {{user.username}}</p> --}}
