--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,14 +1,12 @@
 <p> -- you are in post handlebars --</p>
 <div class="text-center">
-  <h2>{{post.title}}</h2>
+  {{#each posts}}
+  <h2><a href="api/posts/{{this.id}}">{{this.title}}</a></h2>
   {{!-- <p>Created by {{user.username}}</p> --}}
-  <p>
-    {{post.content}}
-  </p>
+  <p>{{this.content}}</p>
   {{#each commentData}}
-  <p>
-    {{this.body}}
-  </p>
+  <p>{{this.body}}</p>
+  {{/each}}
   {{/each}}
   {{!-- <p><button class="btn btn-primary">comment</button></p> --}}
     <form class="form comment-form">
