--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,15 +5,10 @@
 
 
 <!-- Loop over each object in the posts array -->
-{{#each post as |post| }}
+{{#each posts as |post| }}
 <div class="row mb-4 post">
   <div class="col-md-5">
-    <h2>
-      <a href="/post/{{post.id}}">{{post.name}}</a>
-    </h2>
-    <p>
-      {{post.title}}
-    </p>
+      <a href="/{{post.id}}"><h2>{{post.title}}</h2></a>
     <p>Created by {{post.user.username}}</p>
   </div>
   <div class="col-md-7">
