--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,9 +18,9 @@
       <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
+        <a href="/">main page</a> |
         <a href="/dashboard">dashboard</a> |
-        {{!-- <button class="no-button" id="logout">logout</button> --}}
-        <a href="/login">logout</a>
+        <button class="no-button" id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
