--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,9 +17,9 @@
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/">main page</a> |
+        <a href="/">homepage</a> |
         <a href="/dashboard">dashboard</a> |
+        {{#if logged_in}}
         <button class="no-button" id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
