--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -41,7 +41,8 @@
         <h4><a href="/{{post.id}}">{{post.title}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger delete-button" data-id="{{post.id}}">DELETE</button>
+        {{!-- <button class="btn btn-sm btn-danger update-button" data-id="{{post.id}}">EDIT</button> --}}
       </div>
     </div>
     {{/each}}
