--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="col-auto">
     {{!-- <h2>Welcome, {{username}}!</h2> --}}
-        <h2>Welcome!</h2>
+    <h2>Welcome!</h2>
   </div>
 </div>
 
@@ -43,6 +43,7 @@
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger delete-button" data-id="{{post.id}}">DELETE</button>
         {{!-- <button class="btn btn-sm btn-danger update-button" data-id="{{post.id}}">EDIT</button> --}}
+        <a href="/postupdate/{{post.id}}"><button class="btn btn-sm btn-danger">EDIT</button></a>
       </div>
     </div>
     {{/each}}
