--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,8 +8,8 @@
 {{#each posts as |post| }}
 <div class="row mb-4 post">
   <div class="col-md-5">
-      <a href="/{{post.id}}"><h2>{{post.title}}</h2></a>
-    <p>Created by {{post.user.username}}</p>
+      <a href="/post/{{post.id}}"><h2>{{post.title}}</h2></a>
+    <p>Created by {{post.user.username}} on {{format_date post.createdAt}}</p>
   </div>
   <div class="col-md-7">
     <p>
