--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,21 +1,21 @@
 <p> -- you are in post handlebars --</p>
 <div class="text-center">
   <h2>{{post.title}}</h2>
-  <p>Created by {{post.user.username}}</p>
+  <p>Created by {{post.user.username}} on {{format_date post.createdAt}}</p>
   <p>{{post.content}}</p>
   {{#each post.comments as |comment|}}
-  <p>{{comment.body}}</p>
+  <p>- {{comment.body}} - by {{comment.user.user_id}} on {{format_date comment.createdAt}}</p>
   {{/each}}
   {{!-- <p><button class="btn btn-primary">comment</button></p> --}}
-    <form class="form comment-form">
-      <div class="form-group">
-        <label for="comment-content">comment:</label>
-        <input class="form-input" type="text" id="{{post.id}}" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">submit</button>
-      </div>
-    </form>
+  <form class="form comment-form">
+    <div class="form-group">
+      <label for="comment-content">comment:</label>
+      <input class="form-input" type="text" id="{{post.id}}" />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary" type="submit">submit</button>
+    </div>
+  </form>
 </div>
 
 <script src="/js/comment.js"></script>
