--- a/views/postupdate.handlebars
+++ b/views/postupdate.handlebars
@@ -14,11 +14,11 @@
     <form class="form update-post-form">
       <div class="form-group">
         <label for="post-title">post title:</label>
-        <input class="form-input" type="text" id="post-title" title="post-title" />
+        <input class="form-input" type="text" id="post-title" title="post-title" value="{{post.title}}" />
       </div>
       <div class="form-group">
         <label for="post-content">content:</label>
-        <textarea class="form-input" id="post-content" title="post-content"></textarea>
+        <textarea class="form-input" id="post-content" title="post-content">{{post.content}}</textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Update</button>
